[tool.poetry]
name = "pywrparser"
version = "0.1.0"
description = "A parser and toolkit for Pywr networks"
authors = ["Paul Slavin <pmslavin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pudb = "^2022.1.1"
coverage = "^6.3.2"
pyflakes = "^2.4.0"
mypy = "^0.942"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
python_version = "3.8.10"
