[tool.poetry]
name = "pywrparser"
version = "0.2.0"
description = "A parser and toolkit for Pywr networks"
authors = ["Paul Slavin <pmslavin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pudb = "^2022.1.1"
coverage = "^6.3.2"
pyflakes = "^2.4.0"
mypy = "^0.942"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
nox = "^2022.1.7"

[tool.poetry.scripts]
pywrparser = "pywrparser.parse:run"

[tool.poetry.group.dev.dependencies]
sphinx = "^5"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-config",
    "--strict-markers"
]
xfail_strict = true
testpaths = ["tests"]


[mypy]
python_version = "3.8.10"
